--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,3 +31,11 @@ body {
     text-wrap: balance;
   }
 }
+
+.main-content {
+  max-width: 80rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
